# rust4pm

./: .gitignore  CHANGELOG.md  CITATION.cff  Cargo.toml  README.md  deny.toml
binary/: Cargo.toml
binary/src/: main.rs
footbridge/: Cargo.toml
footbridge/src/: main.rs
java_bridge/: Cargo.toml
java_bridge/src/: lib.rs
java_bridge/src/copy_log/: copy_log_shared.rs  java_log_to_rust.rs  rust_log_to_java.rs
macros_process_mining/: Cargo.toml  README.md
macros_process_mining/src/: lib.rs
npm_wasm/: Cargo.toml  README.md
npm_wasm/.cargo/: config.toml
npm_wasm/src/: lib.rs
pm_rust/: Cargo.toml
pm_rust/src/: lib.rs
pm_rust/src/alphappp/: auto_parameters.rs  candidate_building.rs  candidate_pruning.rs  full.rs  log_repair.rs
pm_rust/src/event_log/: activity_projection.rs  event_log_struct.rs  import_xes.rs
pm_rust/src/event_log/ocel/: ocel_struct.rs
pm_rust/src/petri_net/: petri_net_struct.rs  pnml.rs
pm_rust/src/xes/: import_xes.rs
pm_wasm/: .gitignore  .proxyrc.js  Cargo.toml  index.html  index.js  index.ts  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts  worker-api.ts  worker.js  worker.ts
pm_wasm/.cargo/: config
pm_wasm/src/: lib.rs
pm_wasm/src/frontend/: App.tsx  DemoUI.tsx  ResultInfo.tsx  index.css  types.ts  worker.ts
process_mining/: .gitignore  Cargo.toml  README.md
process_mining/benches/: alignments.rs  load_dataframe.rs  load_dataframe_mem.rs  load_events.rs  load_events_mem.rs
process_mining/examples/: README.md  event_log_stats.rs  oc_declare.rs  oc_declare_evaluation.rs  ocel_csv_export.rs  ocel_duckdb_export.rs  ocel_kuzudb_export.rs  ocel_stats.rs  petri_net_import_export.rs  process_discovery.rs
process_mining/src/: lib.rs
process_mining/src/alphappp/: auto_parameters.rs  candidate_building.rs  candidate_pruning.rs  full.rs  log_repair.rs
process_mining/src/analysis/: mod.rs
process_mining/src/analysis/case_centric/: dotted_chart.rs  event_timestamp_histogram.rs  mod.rs
process_mining/src/analysis/object_centric/: mod.rs  object_attribute_changes.rs  oc_performance.rs  oc_statistics.rs
process_mining/src/analysis/object_centric/path_schemas/: equivalence.rs  graph.rs  metrics.rs  mod.rs  paths.rs  schema.rs
process_mining/src/bindings/: mod.rs  path_schema_bindings.rs  slim_ocel_bindings.rs
process_mining/src/conformance/: mod.rs  token_based_replay.rs
process_mining/src/conformance/case_centric/: mod.rs  token_based_replay.rs
process_mining/src/conformance/case_centric/alignments/: cost.rs  dijkstra.rs  mod.rs  petri_net.rs  sync_prod_net.rs
process_mining/src/conformance/object_centric/: mod.rs  object_centric_language_abstraction.rs  oc_declare.rs
process_mining/src/core/: io.rs  mod.rs
process_mining/src/core/event_data/: mod.rs  timestamp_utils.rs
process_mining/src/core/event_data/case_centric/: constants.rs  event_log_struct.rs  io.rs  macros.rs  mod.rs
process_mining/src/core/event_data/object_centric/: appendable.rs  io.rs  macros.rs  mod.rs  ocel_struct.rs  readable.rs
process_mining/src/core/event_data/tests/: mod.rs  ocel_gz_io_tests.rs  ocel_xml_import_tests.rs  xes_classifier_tests.rs  xes_import_tests.rs
process_mining/src/core/process_models/: mod.rs
process_mining/src/core/process_models/case_centric/: mod.rs
process_mining/src/core/process_models/object_centric/: mod.rs
process_mining/src/dfg/: dfg_struct.rs  image_export.rs
process_mining/src/discovery/: mod.rs
process_mining/src/discovery/case_centric/: dfg.rs  mod.rs
process_mining/src/discovery/case_centric/alphappp/: auto_parameters.rs  candidate_building.rs  candidate_pruning.rs  full.rs  log_repair.rs  mod.rs
process_mining/src/discovery/case_centric/inductive_miner_app/: mod.rs
process_mining/src/discovery/object_centric/: dfg.rs  mod.rs  variants.rs
process_mining/src/discovery/object_centric/oc_declare/: mod.rs
process_mining/src/event_log/: activity_projection.rs  constants.rs  event_log_splitter.rs  event_log_struct.rs  export_xes.rs  import_xes.rs  macros.rs  stream_xes.rs  xes_streaming.rs
process_mining/src/event_log/dataframe/: mod.rs
process_mining/src/event_log/ocel/: flatten.rs  linked_ocel.rs  macros.rs  mod.rs  ocel_struct.rs  sqlite_ocel.rs  xml_ocel_export.rs  xml_ocel_import.rs
process_mining/src/event_log/ocel/dataframe/: mod.rs  tests.rs
process_mining/src/event_log/ocel/graph_db/: mod.rs  ocel_kuzudb.rs
process_mining/src/event_log/ocel/linked_ocel/: id_linked_ocel.rs  index_linked_ocel.rs  mod.rs  reference_linked_ocel.rs  slim_linked_ocel.rs
process_mining/src/event_log/ocel/sql/: export.rs  mod.rs
process_mining/src/event_log/ocel/sqlite/: mod.rs  (+2 more)
process_mining/src/event_log/tests/: mod.rs  ocel_xml_import_tests.rs  xes_classifier_tests.rs  xes_import_tests.rs
process_mining/src/object_centric/: mod.rs  object_centric_dfg_struct.rs  object_centric_language_abstraction_struct.rs  object_centric_process_tree_struct.rs
process_mining/src/object_centric/conformance/: mod.rs  object_centric_language_abstraction_struct.rs
process_mining/src/object_centric/oc_declare/: discovery.rs  mod.rs  preprocess.rs
process_mining/src/object_centric/ocpt/: mod.rs  object_centric_process_tree_struct.rs
process_mining/src/oc_align/: align_case.rs  mod.rs
process_mining/src/oc_case/: case.rs
process_mining/src/oc_petri_net/: marking.rs  mod.rs  oc_petri_net.rs
process_mining/src/oc_petri_net/util/: intersect_hashbag.rs  mod.rs
process_mining/src/partial_orders/: image_export.rs  partial_event_log_struct.rs
process_mining/src/petri_net/: export_pnml.rs  image_export.rs  import_pnml.rs  petri_net_struct.rs  pnml.rs
process_mining/src/process_tree/: process_tree_struct.rs
process_mining/src/utils/: dijkstra_search.rs  mod.rs  xml_utils.rs
process_mining/test_data/: README.md
python_bridge/: .gitignore  Cargo.toml  pyproject.toml  python-side.ipynb
python_bridge/rust_bridge_pm_py/: __init__.py  event_log.py  import_xes.py  petri_net.py
python_bridge/src/: lib.rs
r4pm/: Cargo.toml  README.md
r4pm/src/: main.rs
(+104 files in other folders)
