[package]
name = "binary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
process_mining = {path = "../process_mining", features = ["graphviz-export"]}
java_bridge = {path = "../java_bridge"}
serde_json = "1.0.105"
serde = {version = "1.0.188", features = ["derive"]}
chrono = {version = "0.4.29", features = ["serde"] }

quick-xml = {version = "0.31.0"}