[package]
name = "footbridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
process_mining = {path = "../process_mining"}
java_bridge = {path = "../java_bridge"}
serde_json = "1.0.105"
serde = {version = "1.0.188", features = ["derive"]}