[package]
name = "macros_process_mining"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Provides procedural macros required by the `rust4pm` project and the `process_mining` crate. Made for internal use only."

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "fold"] }
quote = "1.0"
proc-macro2 = "1.0"
