[package]
name = "process_mining_wasm"
version = "0.1.3"
authors = ["aarkue <git@aarkue.eu>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.100"
uuid = {version = "1.13", features = ["v4", "serde", "js"]}
getrandom = {version = "0.3", features = ["wasm_js"]}
process_mining = {path = "../process_mining"}
serde_json = "1.0.105"
serde = {version = "1.0.188", features = ["derive"]}
serde-wasm-bindgen = "0.6.4"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
