[package]
name = "pm_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.7.0"
serde_json = "1.0.105"
serde = {version = "1.0.188", features = ["derive"]}
chrono = {version = "0.4.29", features = ["serde"] }
uuid = {version = "1.4.1", features = ["v4", "serde"]}