[package]
name = "pm_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
pm_rust = {path = "../pm_rust"}
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"