[package]
name = "pm_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
wasm-bindgen = "0.2"
process_mining = {path = "../process_mining"}
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"
serde_json = "1.0.105"
serde = {version = "1.0.188", features = ["derive"]}
web-sys = {version = "0.3.68", features = ["console"]}
serde-wasm-bindgen = "0.6.4"