[package]
name = "process_mining"
version = "0.3.18"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Process Mining library for working with (object-centric) event data"
homepage = "https://github.com/aarkue/rust-bridge-process-mining"
repository = "https://github.com/aarkue/rust-bridge-process-mining"
documentation = "https://docs.rs/process_mining/"
readme = "README.md"
keywords = ["process-mining"]
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.7.0"
serde_json = "1.0.105"
serde = {version = "1.0.188", features = ["derive"]}
chrono = {version = "0.4.29", features = ["serde"] }
uuid = {version = "1.4.1", features = ["v4", "serde"]}
quick-xml = {version = "0.31.0"}
flate2 = "1.0"
graphviz-rust = {version = "0.9.0", optional = true}
rusqlite = { version = "0.32.1", features = ["bundled","chrono", "serialize"], optional = true }
polars = {version = "0.43.1", features = ["dtype-slim","timezones","partition_by"], optional = true}

[features]

# Enables exporting Petri nets as PNG/SVG/... images using graphviz.
# Note: graphviz needs to be locally installed to the PATH for the image export functions to work.
graphviz-export = ["dep:graphviz-rust"] 

# Enables OCEL 2.0 SQLite import and export functionality
# Note: this might not work on certain architectures or machines if SQLite is not available/cannot be build
ocel-sqlite = ["dep:rusqlite"] 

# Enables polars DataFrame conversion from/to event data structs
dataframes = ["dep:polars"] 



[package.metadata.docs.rs]
all-features = true
