[package]
name = "python_side"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_bridge_pm_py"
crate-type = ["cdylib"]

[dependencies]
pm_rust = {path = "../pm_rust"}
pyo3 = "0.19.0"
pythonize = "0.19.0"
polars = {version = "0.32.1", features = ["docs", "zip_with", "csv", "json", "temporal", "fmt", "dtype-slim", "rows","partition_by"]}
pyo3-polars = "0.6.0"
rayon = "1.7.0"
