[package]
name = "python_side"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_bridge_pm_py"
crate-type = ["cdylib"]

[dependencies]
process_mining = {path = "../process_mining"}
pyo3 = {version = "0.19.0", features = ["abi3-py311", "extension-module"]}
polars = {version = "0.32.1", features = ["dtype-slim","csv","json","partition_by"]}
pyo3-polars = "0.6.0"
rayon = "1.7.0"
chrono = {version = "0.4.31", features = ["serde"] }
uuid = {version = "1.4.1", features = ["v4", "serde"]}
serde_json = "1.0.105"
serde = {version = "1.0.188", features = ["derive"]}