[package]
name = "r4pm"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
process_mining = { path = "../process_mining", features = ["bindings", "ocel-sqlite", "graphviz-export"]}
serde_json = "1.0.105"
serde = {version = "1.0.188", features = ["derive"]}
anstyle = "1.0.13"

